# rabbitmq

./: .gitignore  README.md  SECURITY.md  build.zig  compile_flags.txt  justfile
examples/: CMakeLists.txt  amqp_bind.c  amqp_confirm_select.c  amqp_connect_timeout.c  amqp_consumer.c  amqp_exchange_declare.c  amqp_listen.c  amqp_listenq.c  amqp_producer.c  amqp_rpc_sendstring_client.c  amqp_sendstring.c  amqp_ssl_connect.c  amqp_unbind.c  utils.c  utils.h
examples/unix/: platform_utils.c
include/: amqp_framing.h  amqp_ssl_socket.h
include/rabbitmq/: amqp.h  amqp_private.h  amqp_table.h  amqp_time.h  export.h  framing.h  ssl_socket.h  tcp_socket.h
include/rabbitmq-c/: amqp.h  amqp_private.h  amqp_socket.h  export.h  framing.h  ssl_socket.h  tcp_socket.h
librabbitmq/: CMakeLists.txt  amqp_api.c  amqp_connection.c  amqp_consumer.c  amqp_framing.c  amqp_mem.c  amqp_openssl.c  amqp_openssl_bio.c  amqp_openssl_bio.h  amqp_private.h  amqp_socket.c  amqp_socket.h  amqp_table.c  amqp_table.h  amqp_tcp_socket.c  amqp_time.c  amqp_time.h  amqp_url.c  codegen.py
src/: amqp_api.c  amqp_connection.c  amqp_consumer.c  amqp_framing.c  amqp_mem.c  amqp_openssl.c  amqp_openssl_bio.c  amqp_socket.c  amqp_table.c  amqp_tcp_socket.c  amqp_time.c  amqp_url.c  codegen.py
tests/: CMakeLists.txt  test_basic.c  test_merge_capabilities.c  test_parse_url.c  test_sasl_mechanism.c  test_status_enum.c  test_tables.c  test_timeouts.c
tools/: CMakeLists.txt  common.c  common.h  consume.c  declare_queue.c  delete_queue.c  publish.c
